--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Hardwicke, Charles Philip Yorke, Earl of, 1799-1873'
 - !lcc 'DA'
+- GITenberg
 title: Charles Philip Yorke, Fourth Earl of Hardwicke, Vice-Admiral R.N. — a Memoir
 url: http://www.gutenberg.org/ebooks/7192
